[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/LevelSelectMenu.gd" type="Script" id=1]

[node name="LevelSelectMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="LevelSelect" type="Button" parent="."]
margin_left = 76.0
margin_top = 68.0
margin_right = 259.0
margin_bottom = 232.0
text = "Select Level 1"

[node name="LevelSelect2" type="Button" parent="."]
margin_left = 754.0
margin_top = 55.0
margin_right = 947.0
margin_bottom = 211.0
text = "Select Level 2"

[node name="LevelSelect3" type="Button" parent="."]
margin_left = 87.0
margin_top = 367.0
margin_right = 280.0
margin_bottom = 523.0
text = "Select Level 3"

[node name="LevelSelect4" type="Button" parent="."]
margin_left = 758.0
margin_top = 362.0
margin_right = 951.0
margin_bottom = 518.0
text = "Select Level 4"

[node name="LevelSelect5" type="Button" parent="."]
margin_left = 410.0
margin_top = 214.0
margin_right = 603.0
margin_bottom = 370.0
text = "Select Final Level"

[connection signal="pressed" from="LevelSelect" to="." method="_on_LevelSelect_pressed"]
[connection signal="pressed" from="LevelSelect2" to="." method="_on_LevelSelect2_pressed"]
[connection signal="pressed" from="LevelSelect3" to="." method="_on_LevelSelect2_pressed"]
[connection signal="pressed" from="LevelSelect4" to="." method="_on_LevelSelect2_pressed"]
[connection signal="pressed" from="LevelSelect5" to="." method="_on_LevelSelect2_pressed"]
